# programmer-upgrade

./: Makefile  binary  darray.c  darray.h  main.c
IPCMessage/: generate_all.sh
IPCMessage/framework/: framework_api.xml  generate.sh
IPCMessage/qstream/: generate.sh
IPCMessage/qstream/files/: qstream_ipc_server_api.h
IPCMessage/qstream_ack_to_fw/: qstream_ack_to_fw_api.xml
IPCMessage/qstream_ack_to_fw/files/: qstream_ack_to_fw_ipc_client_api.h  qstream_ack_to_fw_ipc_server_api.c
IPCMessage/qstream_ack_to_sip/: generate.sh  qstream_ack_to_sip_api.xml
IPCMessage/qstream_ack_to_sip/files/: qstream_ack_to_sip_ipc_client_api.c  qstream_ack_to_sip_ipc_server_api.c
IPCMessage/sip/: generate.sh  sip_api.xml
IPCMessage/sip/files/: sip_ipc_client_api.h  sip_ipc_server_api.c
IPCMessage/src/: Makefile  ipc_message.h  ipc_port_management.c  ipc_test_server.c
IPCMessage/test/files/: test_ipc_client_api.c  test_ipc_client_api.h  test_ipc_server_api.h
IPCMessage/tool/: ipc_client_c_file_generator.py  ipc_server_h_file_generator.py
trunk/: Makefile  binary  darray.h  data.h  main.c
trunk/IPCMessage/framework/files/: framework_ipc_client_api.c  framework_ipc_client_api.h  (+2 more)
trunk/IPCMessage/qstream/: qstream_api.xml
trunk/IPCMessage/qstream_ack_to_fw/: generate.sh
trunk/IPCMessage/src/: ipc_port_management.h  ipc_test_client.c
trunk/IPCMessage/test/: generate.sh  test_api.xml
trunk/IPCMessage/tool/: ipc_client_h_file_generator.py  ipc_server_c_file_generator.py
trunk/src/: Makefile.am
wiki/: ReferenceData.wiki  SVNMerge.wiki
(+12 files in other folders)
